* Eliminated eclipse shadows appearing on wrong side of planet
* Added support for specular and bump map effects across a wider range
  of graphics hardware.
   - Introduced notion of a render path
   - Ctrl+V changed to cycle render path instead of toggle vertex shader
   - Added IgnoreGLExtensions directive for celestia.cfg
* Added track command for script
* Fixed eclipse shadow z-fighting artifacts
* Fixed vertical mirroring of textures on 3DS models
* Fixed problems with bump mapping
* Enabled loading of .cel scripts through the Windows or KDE shell
* New directory structure for add-ons; meshes, textures, and other media
  may now be located withing an add-on subdirectory.
* Added texture for Eros
* Added separate cloud and surface textures for Venus
* New "invisible" class for solar system objects
* Fixed crashes that occurred when viewing ringed planets on older hardware
* Got rid of three zeros after decimal point when displaying time rate
* Updated configuration files for new versions of autoconf

1.3.1
* Improved inclusion of light travel delay, also in KDE time setting dialog 
* Fixed lookback command for subsequent changes of target speed
* Allow wildcard character * inplace of extension for texture filenames
* Fix bump mapping (again)
* Use standard normal maps instead of x-reversed ones
* Compute the radii of stars more accurately by using bolometric magnitudes
* Permit star names to be defined within .stc files
* Fixed near clipping of small deep sky objects
* Windows: added auto magnitude toggle to render menu
* KDE: added popup error notifications
* Allow oblate planets to have atmospheres
* Corrected specular highlights; abrupt cutoff near terminator eliminated
* Fixed 'hole in the sky' bug
* Allow sunset color to be specified in .ssc files
* Bound Ctrl+P to mark/unmark selection
* Implemented tab completion of star, planet, and deep sky object names
* Implemented new, scientifically accurate Pluto-Charon textures